# voice-recognition

./: .env  .gitignore  Cargo.toml  README.md  run.sh
examples/: async-std-batch.rs  realtime-basic.rs  realtime.rs  test-realtime.rs  test.rs  tokio-batch.rs  websocket.rs
examples/recognizer/: helpers.rs
scripts/: speechmatics.sh
src/: config.rs  lib.rs
src/batch/: mod.rs
src/microsoft/: mod.rs
src/realtime/: mod.rs
src/realtime/models/: audio_format.rs  transcription_config.rs
