[package]
name = "voice-recognition"
version = "0.3.3"
edition = "2021"
keywords = ["websocket", "voice-recognition", "asr", "async"]
authors = ["Tudor Evans"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/loony-rs/voice-recognition"
repository = "https://github.com/loony-rs/voice-recognition"
description = "An async rust SDK for the Voice-Recognition APIS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"], optional = true }
base64 = "0.21.4"
futures = "0.3.28"
futures-io = "0.3.28"
http = { version = "0.2.9", optional = true }
log = "0.4.20"
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros", "rt", "sync", "rt-multi-thread"], optional = true }
url = "2.4.1"
reqwest = { version = "0.11.20", features = ["multipart", "stream", "json"], optional = true }
futures-util = "0.3.31"
axum = { version="0.8.1", default-features=true, features=["ws", "http2", "http1"]}
env_logger = "0.11.6"
futures-channel = "0.3.31"
cognitive-services-speech-sdk-rs = { version = "1.0.6", optional = true }
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"]}
axum-extra = { version = "0.10.1", features = ["typed-header"]}
tracing = "0.1.41"

[dev-dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[features]
default=["realtime", "batch", "ms"]
speechmatics=[]
ms=["dep:cognitive-services-speech-sdk-rs"]
realtime = ["dep:tokio-tungstenite", "dep:tokio", "dep:http"]
batch = ["dep:reqwest", "dep:rand"]

[[example]]
name = "realtim-basic"
path = "examples/realtime-basic.rs"

[[example]]
name = "tokio-batch"
path = "examples/tokio-batch.rs"

[[example]]
name = "async-std-batch"
path = "examples/async-std-batch.rs"

[[example]]
name = "websocket"
path = "examples/websocket.rs"

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
